--- a/space.html
+++ b/space.html
@@ -3,20 +3,47 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Document</title>
+     <title>Products Services</title>
      <link rel="stylesheet" href="space.css">
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-     <div class="hero">
-          <img id="space-x-logo" src="./image/spacex 1.svg" alt="Space X logo">
-          <h1>Join The <span class="em">Exploration</span></h1>
-          <button class="btn">Apply</button>
-     </div>
-     <div class="second">
-          <h3>Terms and Conditions</h3>
-     </div>
+     <header>
+          <h1>Our Products</h1>
+     </header>
+     <main>
+          <div class="hero">
+               <div class="img-div">
+                    <img src="https://edube.org/uploads/media/default/0001/04/product_image.jpg" alt="Product Image" alt="">
+                    <span class="small-icon">New</span>
+                    <div class="text">
+                         <h2>Product Name</h2>
+                         <p>Product description goes here. It's a brief overview of the product features.</p>
+                    </div>
+               </div>
+          </div>
+          <div>
+               <table>
+                    <tr>
+                         <th>Feature</th>
+                         <th>Details</th>
+                    </tr>
+                    <tr>
+                         <td>Weight</td>
+                         <td>1kg</td>
+                    </tr>
+                    <tr>
+                         <td>Color</td>
+                         <td>Red</td>
+                    </tr>
+                    <tr>
+                         <td>Material</td>
+                         <td>Plastic</td>
+                    </tr>
+               </table>
+          </div>
+     </main>
+     <footer>
+          <p>© 2024 Product</p>
+     </footer>
 </body>
 </html>
