--- a/product.html
+++ b/product.html
@@ -27,15 +27,15 @@
                          <th>Feature</th>
                          <th>Details</th>
                     </tr>
-                    <tr>
-                         <td>Weight</td>
+                    <tr class="row-1">
+                         <td >Weight</td>
                          <td>1kg</td>
                     </tr>
                     <tr>
                          <td>Color</td>
                          <td>Red</td>
                     </tr>
-                    <tr>
+                    <tr class=row-1>
                          <td>Material</td>
                          <td>Plastic</td>
                     </tr>
