--- a/product.html
+++ b/product.html
@@ -41,6 +41,18 @@
                     </tr>
                </table>
           </div>
+          <div class="login">
+               <form action="./product.html">
+                    <fieldset>
+                         <legend>Contact Us</legend>
+                         <label for="name">Name:</label>
+                         <input type="text" name="name" id="name">
+                         <label for="email">E-Mail:</label>
+                         <input type="email" name="email" id="email">
+                         <button type="submit">Submit</button>
+                    </fieldset>
+               </form>
+          </div>
      </main>
      <footer>
           <p>© 2024 Product</p>
