--- a/product.html
+++ b/product.html
@@ -14,11 +14,11 @@
           <div class="hero">
                <div class="img-div">
                     <img src="https://edube.org/uploads/media/default/0001/04/product_image.jpg" alt="Product Image" alt="">
-                    <span class="small-icon">New</span>
-                    <div class="text">
-                         <h2>Product Name</h2>
-                         <p>Product description goes here. It's a brief overview of the product features.</p>
-                    </div>
+                    <span class="small-icon">New</span>                    
+               </div>
+               <div class="text">
+                    <h2>Product Name</h2>
+                    <span class="text-p">Product description goes here. It's a brief overview of the product features.</span>
                </div>
           </div>
           <div>
