--- a/product.html
+++ b/product.html
@@ -8,6 +8,12 @@
      <link rel="icon" href="./favicon_io/favicon-16x16.png" type="image/png">
 </head>
 <body>
-     
+     <header>
+          <h1>Our Products</h1>
+     </header>
+     <main></main>
+     <footer>
+          <p>&copy; 2025</p>
+     </footer>
 </body>
 </html>
