--- a/product.html
+++ b/product.html
@@ -11,7 +11,49 @@
      <header>
           <h1>Our Products</h1>
      </header>
-     <main></main>
+     <main>
+          <div class="hero">
+               <div class="img-div">
+                    <img src="./images/photo-2.jpg" alt="food">
+                    <span>New</span>
+               </div>
+               <div class="text">
+                    <h2>Our New Product</h2>
+                    <p class="text-p">This is a review of our new product. </p>
+               </div>
+          </div>
+     </main>
+     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic asperiores animi quos quibusdam atque, provident magni velit voluptatum a aliquid saepe odit doloremque sed in reiciendis explicabo accusantium dicta possimus.
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae nam, quo vero maiores voluptatum debitis id, saepe error, optio tenetur perspiciatis nihil dolores dolor corrupti hic ullam possimus dolorem tempora.
+     Suscipit delectus, maiores enim sapiente necessitatibus, voluptate explicabo distinctio itaque unde temporibus minus numquam laudantium? Itaque officia harum ipsum eius, officiis, quasi praesentium, quo cupiditate alias debitis rerum et natus!
+     Minima labore unde nobis iure vero? Aliquam eligendi accusamus dolores, magnam id ipsam. Sapiente distinctio in, quos voluptatibus nisi fugit sint corrupti reiciendis eius hic optio dignissimos molestiae. Perspiciatis, harum.
+     Numquam, ea amet tenetur voluptate asperiores labore in esse delectus eum, illo recusandae ab culpa? Aut iste nesciunt quo non officiis repudiandae minus cupiditate dolor consectetur officia? Fuga, quaerat architecto!
+     Unde dolores sequi animi neque voluptatem. Magni doloremque in similique enim placeat vel eos ipsam! Ipsam id voluptates, iure repellendus asperiores sapiente? Alias magni consequuntur sint odit, cum praesentium quisquam?
+     Nihil recusandae ipsa fugiat quidem amet itaque reprehenderit explicabo sequi! Facilis nemo totam eius voluptatibus harum animi veritatis dolores fugiat vero. Illum illo nostrum sit laudantium odio minima beatae quos?
+     Asperiores repudiandae nisi veritatis dolorem fuga tenetur ad nemo cupiditate optio nostrum, quos expedita velit nobis, labore molestias facilis numquam aspernatur officiis, aliquid doloremque? Numquam laborum aspernatur sequi repudiandae amet?
+     Soluta est quae dicta, reiciendis, nobis, placeat distinctio aut iste laboriosam illo adipisci incidunt ducimus? Quis, officia atque incidunt corporis perferendis repellat laboriosam, at alias odio fugit molestias molestiae ut.
+     Vel dolore officiis enim sapiente atque fugiat ratione quia iusto nulla dolores, tenetur accusamus corrupti illum temporibus ea impedit quae, velit incidunt, itaque magnam natus expedita ipsum. Aut, ullam voluptatibus.
+     Beatae itaque, sint, in reiciendis quibusdam explicabo, magni veniam cupiditate eum voluptates expedita. Maiores odit, blanditiis enim voluptas ab iste amet, minima debitis nulla odio quibusdam incidunt placeat, tempore molestias.
+     Iusto laborum impedit autem debitis suscipit, odit voluptas ex dolorem quaerat asperiores alias quo! Placeat nisi aperiam quas porro tenetur omnis inventore dolor optio cum. Aperiam cumque suscipit odit neque?
+     Repellendus, mollitia beatae magni, neque dolore suscipit voluptates vero quae libero cum eius reprehenderit adipisci veniam natus voluptatibus aspernatur ipsam nisi eos laboriosam obcaecati perferendis? Eius illum et tenetur aliquid!
+     Inventore quisquam fugit harum animi quis, quibusdam doloribus nihil, rerum est numquam quod deserunt dolorum laudantium qui magni facilis? Soluta ipsum nobis esse possimus laboriosam voluptatem nisi id beatae unde.
+     Culpa natus magni, iusto nulla libero itaque illo! Nam veritatis, laborum id, amet repudiandae ab, eius ipsa exercitationem nulla eum aliquid recusandae fuga quos assumenda nobis tenetur totam? Incidunt, ex.
+     Repellat eaque eius, ea sapiente delectus praesentium quisquam fugit non maxime id commodi earum odit eveniet quos nam ipsa, provident aperiam dignissimos quaerat incidunt. Aliquid at ad mollitia expedita illo!
+     Veniam, ad nulla. Cupiditate, officia! Quibusdam, debitis dolore ducimus sint alias laboriosam reprehenderit harum nihil reiciendis exercitationem cum, molestias sed, voluptas deleniti amet maiores rerum illum labore. Porro, quia eum!
+     Laborum iure autem fugit laboriosam placeat voluptates error. Dolores provident autem quisquam numquam deserunt earum libero impedit quis fuga maxime expedita nam repellat at, beatae harum vitae. Nesciunt, iste aut.
+     Consectetur, accusantium tempora quasi ex reiciendis aliquam quaerat ea, ipsam nam earum tempore nihil dignissimos voluptatem, non pariatur sapiente! Exercitationem veritatis voluptatibus unde ex repellat officia quae est eos velit.
+     Mollitia illum reiciendis recusandae libero suscipit quasi delectus esse iusto, autem vero earum beatae atque exercitationem voluptate velit nisi quisquam incidunt dolores in quod ex neque debitis provident officia! Facere!
+     Est fugit sit, maiores sint sunt sapiente harum non nemo laudantium. Facere, nihil ipsam commodi dolor sint mollitia, vero sequi culpa, aspernatur eum voluptates? Repellat consequatur accusantium itaque placeat harum.
+     Deserunt, praesentium voluptas harum dolorem expedita minus nisi, veritatis voluptatibus vero deleniti sapiente ex odio veniam inventore. Quia illo mollitia est commodi aliquam, fugit similique debitis exercitationem eligendi repudiandae voluptates.
+     Ratione excepturi necessitatibus quos harum labore corrupti, facilis at reprehenderit maxime ad, consequuntur cumque, vitae nostrum nulla qui corporis. Optio quaerat, totam expedita esse voluptatum ipsa consequuntur deserunt. Corrupti, et.
+     Sapiente corporis impedit voluptas consectetur temporibus a earum deserunt ipsum nemo eum, ad vero natus quae qui excepturi illum distinctio voluptates nesciunt molestias, unde, explicabo labore? Nemo, reiciendis? Aperiam, nostrum.
+     Porro ipsa dignissimos ipsam ducimus facere! Culpa beatae porro labore iure repellat dicta nisi explicabo, accusantium provident modi ex a ad pariatur ratione, deleniti aut earum soluta hic id facilis?
+     Quasi voluptate adipisci sint, quisquam doloribus asperiores dicta iusto culpa mollitia vel, saepe alias consequuntur necessitatibus. Animi voluptatibus hic quae, magni esse eos aut minus. Consequuntur exercitationem iure minima nisi?
+     Earum corrupti eius sunt velit, enim numquam? Quaerat, ducimus ipsum? Architecto rem ea quibusdam! Beatae repellendus, modi obcaecati esse doloribus totam, veniam assumenda soluta minus reprehenderit cumque dicta magnam illo.
+     Expedita, amet placeat delectus deserunt qui rem maxime ab id corrupti doloribus excepturi ipsum blanditiis debitis, dolorum quas, quam voluptatem quo repellendus. Eum, harum perspiciatis officia commodi quod maxime ducimus.
+     Quod at distinctio aliquam voluptate optio excepturi est, cum repudiandae, quam dolores assumenda quia et accusantium earum explicabo modi recusandae fugit vitae? Distinctio impedit possimus ab praesentium soluta labore qui?
+     Laudantium, iste earum. Ullam, ab. Doloribus culpa, quibusdam a nulla nisi sed beatae doloremque accusantium facere quis perferendis quos omnis quaerat, rem architecto! Voluptatum eius tenetur dolorum sint dolores sapiente?
+     Ab aut ipsa officiis! Et enim autem tempora id, non ipsam reiciendis natus dolor magni blanditiis nemo dolore alias, cupiditate molestias possimus dignissimos? Mollitia quaerat, qui eos nam sunt voluptate.
      <footer>
           <p>&copy; 2025</p>
      </footer>
