--- a/product.html
+++ b/product.html
@@ -46,9 +46,9 @@
                <fieldset>
                     <legend>Contact Us</legend>
                     <label for="name">Name:</label>
-                    <input type="text" name="name" id="name">
+                    <input type="text" name="name" id="name" required>
                     <label for="email">E-Mail:</label>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" required>
                     <button type="submit">Submit</button>
                </fieldset>
           </form>
