--- a/product.html
+++ b/product.html
@@ -56,7 +56,7 @@
      </div>
      </main>
      <footer>
-          <p>&copy; 2025</p>
+          <p class="footer-paragraph">&copy; 2025</p>
      </footer>
 </body>
 </html>
