--- a/space.html
+++ b/space.html
@@ -16,7 +16,7 @@
           <button class="btn">Apply</button>
      </div>
      <div class="second">
-          <h3>Terms and Conditions</h3>
+          <h3>Terms and Conditionus</h3>
      </div>
 </body>
 </html>
