--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Product Services</title>
-     
+     <link rel="stylesheet" href="./css/product.css">
      <link rel="icon" href="./favicon_io/android-chrome-192x192.png" type="image/png">
 </head>
 <body>
