--- a/product.html
+++ b/product.html
@@ -9,12 +9,12 @@
 </head>
 <body>
      <header>
-          <h1>Our Products</h1>
+          <h1 class="header-h1">Our Products</h1>
      </header>
      <main class="main-details">
           <div class="hero">
                <div class="img-div">
-                    <img src="./images/photo-2.jpg" alt="food">
+                    <img class="img" src="./images/photo-2.jpg" alt="food">
                     <span>New</span>
                </div>
                <div class="text">
@@ -54,6 +54,7 @@
           </form>
      </div>
      </div>
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eaque impedit asperiores sapiente porro. Magnam sed accusantium blanditiis. Dolore quis tenetur adipisci odit incidunt est magnam sed, autem laudantium delectus?lorem*1000000
      </main>
      <footer>
           <p class="footer-paragraph">&copy; 2025</p>
