--- a/product.html
+++ b/product.html
@@ -49,12 +49,13 @@
                     <input type="text" name="name" id="name" required>
                     <label for="email">E-Mail:</label>
                     <input type="email" name="email" id="email" required>
+                    <label for="message">Message:</label>
+                    <textarea name="message" id="message" required placeholder="Write a message"></textarea>
                     <button type="submit">Submit</button>
                </fieldset>
           </form>
      </div>
      </div>
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eaque impedit asperiores sapiente porro. Magnam sed accusantium blanditiis. Dolore quis tenetur adipisci odit incidunt est magnam sed, autem laudantium delectus?lorem*1000000
      </main>
      <footer>
           <p class="footer-paragraph">&copy; 2025</p>
